# Day26-Track02-Cohort2-MCP-A2A-Infrastructure

./: LAB_ANSWERS.md  README.md  day26_mcp_a2a_lab.ipynb  pyproject.toml
lab_utils/: semantic_router.py
lab_utils/governance/: guard.py
mcp_server/: research_tools_server.py
scripts/: _lab_env.sh  start_a2a_servers.sh  verify_capstone.py
tests/: test_lab.py
