[project]
name = "day26-track02-cohort2-mcp-a2a-infrastructure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.7,<47.0.0",
    "google-adk[a2a]>=1.0.0",
    "httpx>=0.27.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
    "mcp>=1.0.0",
    "numpy>=1.26.0",
    "presidio-anonymizer>=2.2.363",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.30.0",
]
